[UI] Horizontally footer content fixed vertical represented on mobile view

--- a/_sass/footer.scss
+++ b/_sass/footer.scss
@@ -111,6 +111,7 @@ footer {
     border-top: $coolgray 1px solid;
     display: flex;
     justify-content:space-evenly;
+    text-align:center;
     @media (max-width:1000px) {
       flex-direction: column;
       text-align: center;
